src/objects/IP_Navigator__kav.object
<CustomObject>
    <articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <template>Toc</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay>
    <fields>
        <fullName>Action_Status__c</fullName>
        <label>Action/Status</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Internal_Comments__c</fullName>
        <label>Internal Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Oracle_ID__c</fullName>
        <label>Oracle ID</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Procedure_Process__c</fullName>
        <label>Procedure/Process</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Reference_Links__c</fullName>
        <label>Reference Links</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Salesforce_Case_Entries__c</fullName>
        <label>Salesforce Case Entries</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Table__c</fullName>
        <label>Table</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <label>IP Navigator</label>
    <pluralLabel>IP Navigators</pluralLabel>
</CustomObject>